force-app/main/default/objects/Booth__c/Booth__c.object-meta.xml
<CustomObject>
    <label>Booth</label>
    <nameField>
        <label>Booth Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>