force-app/main/default/objects/Booth__c/fields/Booth_Name__c.field-meta.xml
<CustomField>
    <fullName>Booth_Name__c</fullName>
    <label>Booth Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>