force-app/main/default/objects/Booth__c/fields/Briefing__c.field-meta.xml
<CustomField>
    <fullName>Briefing__c</fullName>
    <label>Briefing</label>
    <type>Url</type>
</CustomField>