force-app/main/default/objects/Booth__c/fields/Cloud_Focus__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Focus__c</fullName>
    <label>Cloud Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skill</valueSetName>
    </valueSet>
</CustomField>