force-app/main/default/objects/Booth__c/fields/PMM__c.field-meta.xml
<CustomField>
    <fullName>PMM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMM</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Owned Booths</relationshipLabel>
    <relationshipName>Owned_booths</relationshipName>
    <type>Lookup</type>
</CustomField>