force-app/main/default/objects/Booth__c/fields/Required_Function__c.field-meta.xml
<CustomField>
    <fullName>Required_Function__c</fullName>
    <label>Required Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Function</valueSetName>
    </valueSet>
</CustomField>