force-app/main/default/objects/Booth__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Section__c</columns>
    <columns>NAME</columns>
    <columns>Booth_Name__c</columns>
    <columns>Industry__c</columns>
    <columns>Briefing__c</columns>
    <columns>Required_Function__c</columns>
    <columns>PMM__c</columns>
    <columns>Cloud_Focus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>